[tool.poetry]
name = "audio2clipvid"
version = "0.1.0"
description = ""
authors = ["Sebas <diego.cruz.cervantes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
llvmlite = "^0.43.0"
numba = ">=0.57"
moviepy = "^2.1.1"
torch = "^2.5.1"
ffmpeg-python = "^0.2.0"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}
clipvid = {git = "https://github.com/SebasCrucer/clipvid.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
